[package]
name = "faer-ext"
version = "0.4.1"
edition = "2021"
authors = ["sarah <>"]
description = "faer-rs API for interoperability with external libraries"
readme = "README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]
rust-version = "1.67.0"

[dependencies]
faer = { version = "0.21.4", default-features = false }
faer-traits = "0.21.0"
ndarray = { version = "0.16", default-features = false, optional = true }
numpy = "0.23.0"
pyo3 = "*"
num-complex = { version = "0.4.5", default-features = false }

[features]
default = ["ndarray"]
ndarray = ["dep:ndarray"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
