[package]
name = "faer-ext"
version = "0.4.1"
edition = "2021"
authors = ["sarah <>"]
description = "faer-rs API for interoperability with external libraries"
readme = "README.md"
repository = "https://github.com/sarah-ek/faer-rs/"
license = "MIT"
keywords = ["math", "matrix", "linear-algebra"]
rust-version = "1.67.0"

[dependencies]
faer = { version = "0.21.0", default-features = false }
faer-traits = "0.21.0"
ndarray = { version = "0.16", default-features = false, optional = true }
nalgebra = { version = "0.33", default-features = false, optional = true }
numpy = { version="0.23.0", default-features = false, optional = true }
pyo3 = { version="0.23", default-features = false, optional = true }
num-complex = { version = "0.4.5", default-features = false }

[dev-dependencies]
nalgebra = { version = "0.33" }

[features]
default = ["numpy"]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]
numpy = ["dep:numpy", "dep:pyo3"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
